<?xml version="1.0"?>
<package>
  <name>orb_slam2</name>
  <version>0.0.0</version>
  <description>ORB SLAM2</description>

  <maintainer email="post@lennarthaller.de">Lennart Haller</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
